# VIBE

./: .gitignore  CLAUDE.md  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
src/: bot.ts  constants.ts  index.ts  test.ts  testVillagerTrade.ts  utils.ts
src/actions/: action.ts  alwaysShield.ts  efficientEat.ts  emergencyQuit.ts  gotoLocation.ts  index.ts  lootFinder.ts
src/strategies/: index.ts  netherHighway.ts  strategy.ts  villagerExpTrade.ts
vibe/: __init__.py  __main__.py  bot.py  constants.py  loggercfg.py  utils.py
vibe/actions/: action.py  always_shield.py  efficient_eat.py  emergency_quit.py  goto_location.py  loot_finder.py
vibe/strategies/: nether_highway.py  strategy.py
