[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "vibe"
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
license = {text = "MIT"}
description = "Viticultures Integrated Bot Exploits"
urls = {Homepage = "https://github.com/vitic1ture/vibe"}
requires-python = ">= 3.10"
dependencies = [
    "javascript",
]
dynamic = ["version"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.optional-dependencies]
test = [
    "ipdb",
    "pytest",
]

[project.scripts]
vibe = "vibe.__main__:main"

[tool.setuptools]
include-package-data = true
license-files = ["LICENSE"]

[tool.setuptools.packages]
find = {namespaces = false}

[tool.setuptools.dynamic]
version = {attr = "vibe.__version__"}
